# fabm0_agg

./: README.md  gotm.yaml  output.yaml  settling_plotting.py
include/: fabm_private.h  standard_variable_assignments.h  standard_variables.h
parallel/: README.md  fabm.yaml  gotm.yaml  gotm_aggregation_patch.diff  output.yaml  parameterauto6.sh  parameterautooszmay.sh  parameterfunslurm.sh  postpro.sh  postrun.sh  slurm_agg.sh  test5p_oszmay.sh  testlab3500.sh
parallel/Plot/: bale2002.py  compare.py  parameter.py  plotlab3500terms.py  plotoszfeb.py  plotoszmay.py  plotoszmayterms.py  plottmzfeb.py  plottmzjul.py  postparameter.py  postparameter1.py  postparameter2.py  postparameter2oszfeb.py  postparameter2oszmay.py  postparameter2range.py  postparameter2tmzfeb.py  postparameter2tmzjul.py  pythonagg.py  size.py
parallel/Plot/data/: SSC_20cmab_obs.txt  d50_bale3500.txt  extravalues.py  flow_baled503500.txt  oszd50feb.txt  oszd50may.txt  oszflowfeb.txt  oszflowmay.txt  oszspmfeb.txt  oszspmmay.txt  (+7 more)
src/: CMakeLists.txt  fabm_library.F90.in
src/models/hzg/: CMakeLists.txt  hzg_model_library.F90
src/models/hzg/agg/: CITATION.cff  README.md  agg.F90  agg_field.F90  agg_lab.F90
src/models/hzg/agg/fieldsetup/: fabm.yaml
src/models/hzg/agg/labsetup/: fabm.yaml  gotm.yaml  output.yaml
src/models/hzg/ctenophore_jt/: ctenophore_jt.F90
src/models/hzg/ecosmo/: ecosmo.F90
src/models/hzg/icealgea/: .icealgea.F90.swp  icealgea.F90
src/models/hzg/icelight/: icelight.F90
src/models/hzg/jelly/: jelly.F90
src/models/hzg/lina/: lina.F90  lina.f90  model_documentation.tex  parameters_table.ods
src/models/hzg/maecs/: maecs.F90  maecs_do.F90  maecs_types.F90
src/models/hzg/pops/: PCB.F90  pops.F90
src/models/hzg/test/: fabm.yaml  test.F90
src/models/hzg/uvlight/: uvlight.F90
testcases/: fabm-pops-uv.yaml
util/standard_variables/: variables.yaml
(+38 files in other folders)
